// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`holocronModule executeLoad should call load if present with props 1`] = `
Array [
  Array [
    Object {
      "myFakeProp": true,
    },
  ],
]
`;

exports[`holocronModule executeLoadModuleData should call loadModuleData if dispatch and loadModuleData are present 1`] = `
Array [
  Array [
    Object {
      "fetchClient": [MockFunction],
      "module": Object {
        "displayName": "FakeComponent",
      },
      "ownProps": Object {},
      "store": Object {
        "dispatch": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getState": [MockFunction],
      },
    },
  ],
]
`;

exports[`holocronModule should gracefully handle module state missing from store 1`] = `
<div>
  Mock Module 
  2
</div>
`;

exports[`holocronModule should pass mergeProps to connect if it is specified 1`] = `
<div>
  3
   * 
  4
   = 
  12
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as error when it failed to load 1`] = `
<div>
  Mock Module - 
  loading
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as loaded when loaded 1`] = `
<div>
  Mock Module - 
  loaded
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as loading when loading 1`] = `
<div>
  Mock Module - 
  loading
</div>
`;

exports[`holocronModule should provide the module state as a plain JS prop if a reducer is provided 1`] = `
<div>
  value
</div>
`;

exports[`holocronModule should wrap module if no arguments are provided 1`] = `
<div>
  Mock Module
</div>
`;
